# citylab_project

./: CMakeLists.txt  package.xml
action/: GoToPose.action
install/: local_setup.sh  setup.sh
install/robot_patrol/include/robot_patrol/robot_patrol/srv/detail/: get_direction__builder.hpp  get_direction__functions.c  get_direction__rosidl_typesupport_fastrtps_c.h  get_direction__rosidl_typesupport_fastrtps_cpp.hpp
install/robot_patrol/lib/robot_patrol/: direction_service_node  patrol_node  patrol_with_service_node  test_service_node
install/robot_patrol/local/lib/python3.10/dist-packages/robot_patrol/srv/: _get_direction.py  _get_direction_s.c
install/robot_patrol/share/ament_index/resource_index/parent_prefix_path/: robot_patrol
install/robot_patrol/share/robot_patrol/: local_setup.sh  package.ps1  package.sh
install/robot_patrol/share/robot_patrol/cmake/: export_robot_patrol__rosidl_generator_cppExport.cmake  export_robot_patrol__rosidl_generator_pyExport-noconfig.cmake  export_robot_patrol__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_robot_patrol__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  robot_patrol__rosidl_typesupport_cppExport.cmake  robot_patrol__rosidl_typesupport_introspection_cExport.cmake  robot_patrol__rosidl_typesupport_introspection_cppExport.cmake
install/robot_patrol/share/robot_patrol/launch/: main.launch.py  start_patrolling.launch.py  start_test_service.launch.py
launch/: start_direction_service.launch.py  start_gotopose_action.launch.py  start_patrolling.launch.py
log/: latest_build
rviz/: config.rviz  rviz_config.rviz
src/: direction_service.cpp  go_to_pose_action.cpp  patrol.cpp  patrol_with_service.cpp  test_service.cpp
